tests/ui/generic-associated-types/unsatisfied-item-lifetime-bound.stderr
warning: unnecessary lifetime parameter `'a`
  --> $DIR/unsatisfied-item-lifetime-bound.rs:4:12
   |
LL |     type Y<'a: 'static>;
   |            ^^
   |
   = help: you can use the `'static` lifetime directly, in place of `'a`
note: the lint level is defined here
  --> $DIR/unsatisfied-item-lifetime-bound.rs:1:9
   |
LL | #![warn(unused_lifetimes)]
   |         ^^^^^^^^^^^^^^^^

error[E0478]: lifetime bound not satisfied
  --> $DIR/unsatisfied-item-lifetime-bound.rs:13:8
   |
LL |     f: <T as X>::Y<'a>,
   |        ^^^^^^^^^^^^^^^
   |
note: lifetime parameter instantiated with the lifetime `'a` as defined here
  --> $DIR/unsatisfied-item-lifetime-bound.rs:12:10
   |
LL | struct B<'a, T: for<'r> X<Y<'r> = &'r ()>> {
   |          ^^
   = note: but lifetime parameter must outlive the static lifetime

error[E0478]: lifetime bound not satisfied
  --> $DIR/unsatisfied-item-lifetime-bound.rs:18:8
   |
LL |     f: <T as X>::Y<'a>,
   |        ^^^^^^^^^^^^^^^
   |
note: lifetime parameter instantiated with the lifetime `'a` as defined here
  --> $DIR/unsatisfied-item-lifetime-bound.rs:17:10
   |
LL | struct C<'a, T: X> {
   |          ^^
   = note: but lifetime parameter must outlive the static lifetime

error[E0478]: lifetime bound not satisfied
  --> $DIR/unsatisfied-item-lifetime-bound.rs:23:8
   |
LL |     f: <() as X>::Y<'a>,
   |        ^^^^^^^^^^^^^^^^
   |
note: lifetime parameter instantiated with the lifetime `'a` as defined here
  --> $DIR/unsatisfied-item-lifetime-bound.rs:22:10
   |
LL | struct D<'a> {
   |          ^^
   = note: but lifetime parameter must outlive the static lifetime

error: aborting due to 3 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0478`.
